# CMU_Find_Stalk

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  model_0049999.pth  model_field_day1.pth  package.xml  setup.py
msg/: line.msg  stalk.msg
scripts/: main  stalk_detect
src/: config.py  labeler.py  main.py  model.py  svm.py  transforms.py  utils.py  visualize.py
src/stalk_detect/: config.py  model.py  transforms.py  utils.py  visualize.py
src/stalk_detect_vision/: config.py  model.py  transforms.py  utils.py  visualize.py
srv/: GetStalk.srv  GetStalkVision.srv
